--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="#">User Library</a>
         <a href="#">Order History</a>
         <a href="#">Settings</a>
-        <a href="#">Log Out</a>
+        <a href="#">Log Out <i class="glyphicon glyphicon-off"></i></a>
       </div>
        <a href="#">Log In</a>
        <a href="#">Sign Up</a>
@@ -67,11 +67,86 @@
   <div class="body">
   <!-- UPPER SECTION -->
   <div class="upper-section">
+<!-- slideshow container -->
+<div class="slideshow-container">
 
-  </div>
+<!-- Full-width images with number and caption text -->
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="../media/images/photo/ableton.jpg" style="width: 100%">
+  <div class="text">CAPTION TEXT</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="../media/images/photo/desk.jpg" style="width: 100%">
+  <div class="text">CAPTION TWO</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 3</div>
+  <img src="../media/images/photo/mix-board-3.jpg" style="width: 100%">
+  <div class="text">CAPTION THREE</div>
+</div>
+
+  <!-- next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- dots and circles -->
+<div class="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+</div>
+
   <!-- MIDDLE SECTION -->
   <div class="middle-section">
-
+    <ol>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/age-quod-agoat.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/circles.png" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/circles.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/_official-danger-zone.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/danger-zone.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/pacifist.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/vices.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/taciturn.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/zenith.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/valhalla.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/sound-of-xion.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+    <li><img src="../media/images/instrumental-art/thessiah-black.jpg" alt="no picture found" height="80px" width="80px"><audio controls>
+      <source src="../media/music/mp3s/nanny-marij.mp3" type="audio/mpeg">
+      <p>Your browser does not support the audio element
+    </audio></li> <i class="glyphicon glyphicon-file"></i> <i class="glyphicon glyphicon-shopping-cart"></i> <i class="glyphicon glyphicon-share-alt"></i>
+  </ol>
   </div>
   <!-- LOWER SECTION -->
   <div class="lower-section">
@@ -87,5 +162,6 @@
 </div>
   </div>
 <!-- DOCUMENT BODY END -->
+<script type="text/javascript" src="../javascript/home-slide.js"></script>
 </body>
 </html>
