--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
   <!-- NAVIGATION SECTION -->
     <div class="subnav">
       <button class="subnavbtn"><i class="glyphicon glyphicon-menu-hamburger"></i></button>
-      <div class="subnav-content">
         <a href="#">Home</a>
         <a href="#">Products</a>
-        <a href="#">Services</a>
+        <div class="dropdown">
+              <button class="dropbtn">Services</button>
+          <div class="dropdown-content">
+              <a href ='#'>service 1</a>
+              <a href ='#'>service 2</a>
+              <a href ='#'>service 3</a>
+          </div>     
+      </div>
         <a href="#">About Us</a>
         <a href="#">FAQs</a>
         <a href="#">Resources</a>
         <a href="#">Log In</a>
         <a href="#">Sign Up</a>
-      </div>
     </div>
       <i class="glyphicon glyphicon-home"></i>
        <a href="#">Products</a>
